5.3-service-mesh/istio/microservices/services-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: store-service
spec:
  selector:
    app: store
  ports:
    - protocol: TCP
      port: 8480
      name: http
      targetPort: 8480
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: store
spec:
  replicas: 1
  selector:
    matchLabels:
      app: store
  template:
    metadata:
      labels:
        app: store
    spec:
      containers:
        - name: store
          image: romanowalex/store-service:v1.0
          imagePullPolicy: Always
          ports:
            - name: web
              containerPort: 8480
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  selector:
    app: order
  ports:
    - protocol: TCP
      port: 8380
      name: http
      targetPort: 8380
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
    spec:
      containers:
        - name: order
          image: romanowalex/order-service:v1.0
          imagePullPolicy: Always
          ports:
            - name: web
              containerPort: 8380
---
apiVersion: v1
kind: Service
metadata:
  name: warehouse-service
spec:
  selector:
    app: warehouse
  ports:
    - protocol: TCP
      port: 8280
      name: http
      targetPort: 8280
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: warehouse
spec:
  replicas: 1
  selector:
    matchLabels:
      app: warehouse
  template:
    metadata:
      labels:
        app: warehouse
    spec:
      containers:
        - name: warehouse
          image: romanowalex/warehouse-service:v1.0
          imagePullPolicy: Always
          ports:
            - name: web
              containerPort: 8280
---
apiVersion: v1
kind: Service
metadata:
  name: warranty-service
spec:
  selector:
    app: warranty
  ports:
    - protocol: TCP
      port: 8180
      name: http
      targetPort: 8180
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: warranty
spec:
  replicas: 1
  selector:
    matchLabels:
      app: warranty
  template:
    metadata:
      labels:
        app: warranty
    spec:
      containers:
        - name: warranty
          image: romanowalex/warranty-service:v1.0
          imagePullPolicy: Always
          ports:
            - name: web
              containerPort: 8180
